--- a/login.html
+++ b/login.html
@@ -6,61 +6,46 @@
 
 		<script type="text/javascript" src="./resouces/js/jquery-3.4.1.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="./resouces/js/login/login.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="./resouces/js/login/forget-password.js" charset="UTF-8"></script>
 
 		<link rel="stylesheet" type="text/css" href="./resouces/css/login/main.css">
-		<link rel="stylesheet" type="text/css" href="./resouces/css/login/util.css">
+		<link rel="stylesheet" type="text/css" href="./resouces/css/login/restyle.css">
+		<link rel="stylesheet" type="text/css" href="./resouces/css/login/input.css">
+		<link rel="stylesheet" type="text/css" href="./resouces/css/login/button.css">
 
-		<title>登录 - 谷心然老女人专用系统</title>
+		<title>登录 - 谷心然小朋友专用系统</title>
 	</head>
 	<body>
-		<div class="dowebok">
-			<div class="container-login100">
-				<div class="wrap-login100">
-					<div class="login100-pic js-tilt">
-						<img src="./resouces/img/login/logo.png" alt="IMG">
+		<div class="login-container">
+			<div class="login-picture">
+				<img src="./resouces/img/login/logo.png" alt="IMG">
+			</div>
+			<div class="from-contianer">
+				<from>
+					<div class="form-title"><span>登录</span></div>
+					<div class="input-contianer" >
+						<input type="text" id="user" placeholder="用户名">
+						<span class="input-span" id="input-user"></span>
+						<input type="password" id="password" placeholder="密码">
+						<span class="input-span" id="input-password"></span>
 					</div>
-
-					<form class="login100-form validate-form">
-						<span class="login100-form-title">
-							请登录
-						</span>
-
-						<div class="wrap-input100 validate-input">
-							<input class="input100" type="text" id="user" placeholder="用户名">
-							<span class="focus-input100"></span>
-							<span class="symbol-input100">
-								<i class="fa fa-envelope" aria-hidden="true"></i>
-							</span>
-						</div>
-
-						<div class="wrap-input100 validate-input">
-							<input class="input100" type="password" id="password" placeholder="密码">
-							<span class="focus-input100"></span>
-							<span class="symbol-input100">
-								<i class="fa fa-lock" aria-hidden="true"></i>
-							</span>
-						</div>
-
-						<div class="container-login100-form-btn">
-							<button class="login100-form-btn" onclick="return login();">
-								登录
-							</button>
-						</div>
-
-						<div class="text-center p-t-12">
-							<a class="txt2" href="javascript:">
-								忘记密码？
-							</a>
-						</div>
-
-					</form>
-
-				</div>
-				<div style="text-align: center;">
-					<p style="color: #000000;">注意事项：如发现产品问题，请及时联系管理员。本系统由 Alex_McAvoy 开发，严禁非法访问内部数据。</p>
-				</div>
+					<div class="btn-contianer">
+						<button class="btn" onclick="return login();">提交
+							<span></span>
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
+					</div>
+					
+					<div class="message-contianer" id="mouse">
+						<span>忘记密码？</span><br/>
+						<span id="forget-password"></span>
+					</div>
+					
+				</from>
 			</div>
 		</div>
-
 	</body>
 </html>
+
