--- a/index/index.html
+++ b/index/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<!-- <html xmlns="http://www.w3.org/1999/xhtml"> -->
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-		<link rel="stylesheet" type="text/css" href="../resouces/css/index.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=0" />
+		
+		<script type="text/javascript" src="../resouces/js/jquery-3.4.1.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/bootstrap.min.js" charset="UTF-8"></script>
+		
 		<script type="text/javascript" src="../resouces/js/index/begin.js" charset="UTF-8"></script>
-		<script type="text/javascript" src="../resouces/js/index/show-prizes.js" charset="UTF-8"></script>
-		<script type="text/javascript" src="../resouces/js/index/to-lottery.js" charset="UTF-8"></script>
+		
+		<script type="text/javascript" src="../resouces/js/navigation/main.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/navigation/to-lottery.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/navigation/display-prizes.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/navigation/no-display-prizes.js" charset="UTF-8"></script>
 
-		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../resouces/css/index/main.css">
+		<link rel="stylesheet" type="text/css" href="../resouces/css/bootstrap.min.css">
 
-		<title>首页 - 谷心然老女人专用系统</title>
+		<title>首页 - 谷心然小朋友专用系统</title>
 	</head>
-	<body background="../resouces/img/index/background.jpg" >
-		<nav class="navbar navbar-default" role="navigation">
+	<body>
+
+		<nav id="nav" class="navbar navbar-default" role="navigation">
 			<div>
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<p class="navbar-brand navBarFont">谷心然老女人专用</p>
+						<a href="javascript:void(0);onclick=noDisplayPrize()">
+							<p class="navbar-brand navBarFont">谷心然小朋友专用系统</p>
+						</a>
 						<ul class="nav navbar-nav collapse navbar-collapse">
 							<li>
 								<a href="javascript:void(0);onclick=toLottery()">
@@ -36,7 +42,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="javascript:void(0);onclick=showPrize()">
+								<a href="javascript:void(0);onclick=displayPrize()">
 									<p class="navBarFont">
 										往期中奖汇总
 									</p>
@@ -48,83 +54,90 @@
 			</div>
 		</nav>
 
-		<div class="jumbotron" style="margin: 30px 70px 10px 70px; padding: 10px 0px 0px 0px;background-color: #ffffff;">
-
-			<div class="row" style="text-align:center; padding: 20px 0px 0px 0px;">
-				<div class="col-md-1"></div>
-				<div class="col-md-5">
-					<div class="container-fluid">
-						<div class="main-container">
-							<div id="slidershow" class="carousel slide">
-								<!-- 轮播指标 -->
-								<ol class="carousel-indicators">
-									<li class="active" data-target="#slidershow" data-slide-to="0"></li>
-									<li data-target="#slidershow" data-slide-to="1"></li>
-									<li data-target="#slidershow" data-slide-to="2"></li>
-									<li data-target="#slidershow" data-slide-to="3"></li>
-									<li data-target="#slidershow" data-slide-to="4"></li>
-									<li data-target="#slidershow" data-slide-to="5"></li>
-									<li data-target="#slidershow" data-slide-to="6"></li>
-								</ol>
-								<!-- 轮播项目 -->
-								<div class="carousel-inner">
-									<div class="item active">
-										<img src="../resouces/img/index/trun/01.jpg" style="width: 586px;height: 415px;" alt="First slide">
+		<div class="jumbotron container">
+			
+			<div id="first-row">
+				<div class="row first-row-style">
+					<div class="col-md-1"></div>
+					<div class="col-md-5">
+						<div class="container-fluid">
+							<div class="main-container">
+								<div id="slidershow" class="carousel slide">
+									<!-- 轮播指标 -->
+									<ol class="carousel-indicators">
+										<li class="active" data-target="#slidershow" data-slide-to="0"></li>
+										<li data-target="#slidershow" data-slide-to="1"></li>
+										<li data-target="#slidershow" data-slide-to="2"></li>
+										<li data-target="#slidershow" data-slide-to="3"></li>
+										<li data-target="#slidershow" data-slide-to="4"></li>
+										<li data-target="#slidershow" data-slide-to="5"></li>
+										<li data-target="#slidershow" data-slide-to="6"></li>
+									</ol>
+									<!-- 轮播项目 -->
+									<div class="carousel-inner">
+										<div class="item active">
+											<img src="../resouces/img/index/trun/01.jpg" class="turn-pirc" alt="First slide">
+										</div>
+										<div class="item">
+											<img src="../resouces/img/index/trun/02.jpg" class="turn-pirc" alt="Second slide">
+										</div>
+										<div class="item">
+											<img src="../resouces/img/index/trun/03.jpg" class="turn-pirc" alt="Third slide">
+										</div>
+										<div class="item">
+											<img src="../resouces/img/index/trun/04.jpg" class="turn-pirc" alt="Third slide">
+										</div>
+										<div class="item">
+											<img src="../resouces/img/index/trun/05.jpg" class="turn-pirc" alt="Third slide">
+										</div>
+										<div class="item">
+											<img src="../resouces/img/index/trun/06.jpg" class="turn-pirc" alt="Third slide">
+										</div>
+										<div class="item">
+											<img src="../resouces/img/index/trun/07.jpg" class="turn-pirc" alt="Third slide">
+										</div>
 									</div>
-									<div class="item">
-										<img src="../resouces/img/index/trun/02.jpg" style="width: 586px;height: 415px;" alt="Second slide">
-									</div>
-									<div class="item">
-										<img src="../resouces/img/index/trun/03.jpg" style="width: 586px;height: 415px;" alt="Third slide">
-									</div>
-									<div class="item">
-										<img src="../resouces/img/index/trun/04.jpg" style="width: 586px;height: 415px;" alt="Third slide">
-									</div>
-									<div class="item">
-										<img src="../resouces/img/index/trun/05.jpg" style="width: 586px;height: 415px;" alt="Third slide">
-									</div>
-									<div class="item">
-										<img src="../resouces/img/index/trun/06.jpg" style="width: 586px;height: 415px;" alt="Third slide">
-									</div>
-									<div class="item">
-										<img src="../resouces/img/index/trun/07.jpg" style="width: 586px;height: 415px;" alt="Third slide">
-									</div>
+									<!-- 轮播导航 -->
+									<a class="left carousel-control" href="#slidershow" role="button" data-slide="prev">
+										<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+										<span class="sr-only">Previous</span>
+									</a>
+									<a class="right carousel-control" id="clickMe" href="#slidershow" role="button" data-slide="next">
+										<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+										<span class="sr-only">Next</span>
+									</a>
 								</div>
-								<!-- 轮播导航 -->
-								<a class="left carousel-control" href="#slidershow" role="button" data-slide="prev">
-									<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-									<span class="sr-only">Previous</span>
-								</a>
-								<a class="right carousel-control" id="clickMe" href="#slidershow" role="button" data-slide="next">
-									<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-									<span class="sr-only">Next</span>
-								</a>
+							</div>
+						</div>
+					</div>
+					
+					<div class="col-md-5">
+						<div class="container-fluid">
+							<div class="jumbotron">
+							<br/>
+							<h2>你好哇，</h2>
+							<h2>可爱的谷心然小朋友</h2>
+							<h2>qwq</h2><br/>
+							<p>欢迎使用专属于你的开奖系统，</p>
+							<p>祝你今天好运连连！！！</p>
+							<br/>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-5">
-					<div class="container-fluid">
-						<div class="jumbotron">
-							<br/>
-							<h2>你好哇，<h2>
-							<h2>快奔三的找不到对象的丑陋的谷心然老女人</h2>
-							<h2>qwq</h2><br/>
-							<p>欢迎使用专属于你的开奖系统，</p>
-							<p>祝你今天什么都抽不到！！！</p>
-							<br/>
+			</div>
+
+			<div id="second-row">
+				<div class="row" style="text-align:center;">
+					<div class="col-md-1"></div>
+					<div class="col-md-10">
+						<div id="prizes">
 						</div>
 					</div>
+					<div class="col-md-1"></div>
 				</div>
 			</div>
-			<div class="row" style="text-align:center;">
-				<div class="col-md-1"></div>
-				<div class="col-md-10">
-					<div id="prizes">
-					</div>
-				</div>
-				<div class="col-md-1"></div>
-			</div>
+			
 		</div>
 	</body>
 </html>
