--- a/index/index.html
+++ b/index/index.html
@@ -4,18 +4,21 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=0" />
 		
-		<script type="text/javascript" src="../resouces/js/jquery-3.4.1.js" charset="UTF-8"></script>
+		<!-- <script type="text/javascript" src="../resouces/js/jquery-3.4.1.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/bootstrap.min.js" charset="UTF-8"></script>
+		<link rel="stylesheet" type="text/css" href="../resouces/css/bootstrap.min.css"> -->
 		
+		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+				
+		<link rel="stylesheet" type="text/css" href="../resouces/css/index/main.css">
 		<script type="text/javascript" src="../resouces/js/index/begin.js" charset="UTF-8"></script>
-		
+
 		<script type="text/javascript" src="../resouces/js/navigation/main.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/to-lottery.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/display-prizes.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/no-display-prizes.js" charset="UTF-8"></script>
-
-		<link rel="stylesheet" type="text/css" href="../resouces/css/index/main.css">
-		<link rel="stylesheet" type="text/css" href="../resouces/css/bootstrap.min.css">
 
 		<title>首页 - 谷心然小朋友专用系统</title>
 	</head>
