--- a/index/index.html
+++ b/index/index.html
@@ -3,18 +3,28 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=0" />
-		
+
 		<!-- <script type="text/javascript" src="../resouces/js/jquery-3.4.1.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/bootstrap.min.js" charset="UTF-8"></script>
 		<link rel="stylesheet" type="text/css" href="../resouces/css/bootstrap.min.css"> -->
 		
+		<!-- bootstrap -->
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-				
+
+		<!-- 预加载 -->
 		<link rel="stylesheet" type="text/css" href="../resouces/css/index/main.css">
 		<script type="text/javascript" src="../resouces/js/index/begin.js" charset="UTF-8"></script>
+		
+		<!-- 心 -->
+		<link rel="stylesheet" type="text/css" href="../resouces/css/index/heart.css">
+		
+		<!-- 樱花 -->
+		<link rel="stylesheet" type="text/css" href="../resouces/css/sakura/main.css">
+		<script type="text/javascript" src="../resouces/js/sakura/main.js" charset="UTF-8"></script>
 
+		<!-- 导航栏 -->
 		<script type="text/javascript" src="../resouces/js/navigation/main.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/to-lottery.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/display-prizes.js" charset="UTF-8"></script>
@@ -23,6 +33,10 @@
 		<title>首页 - 谷心然小朋友专用系统</title>
 	</head>
 	<body>
+		
+		<div class="sakura">
+			<img id="sakura-img" src="../resouces/img/sakura/sakura.png" />
+		</div>
 
 		<nav id="nav" class="navbar navbar-default" role="navigation">
 			<div>
@@ -57,8 +71,8 @@
 			</div>
 		</nav>
 
+		
 		<div class="jumbotron container">
-			
 			<div id="first-row">
 				<div class="row first-row-style">
 					<div class="col-md-1"></div>
@@ -113,18 +127,33 @@
 							</div>
 						</div>
 					</div>
-					
+
 					<div class="col-md-5">
 						<div class="container-fluid">
 							<div class="jumbotron">
-							<br/>
-							<h2>你好哇，</h2>
-							<h2>可爱的谷心然小朋友</h2>
-							<h2>qwq</h2><br/>
-							<p>欢迎使用专属于你的开奖系统，</p>
-							<p>祝你今天好运连连！！！</p>
-							<br/>
+								<br />
+								<h2>你好哇，</h2>
+								<h2>可爱的谷心然小朋友</h2>
+								<h2>qwq</h2><br />
+								<p>欢迎使用专属于你的开奖系统，</p>
+								<p>祝你今天好运连连！！！</p>
+								<br />
 							</div>
+						</div>
+					</div>
+					<div class="col-md-1">
+						<div class="heart">
+							<ul>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+								<li></li>
+							</ul>
 						</div>
 					</div>
 				</div>
@@ -140,7 +169,7 @@
 					<div class="col-md-1"></div>
 				</div>
 			</div>
-			
 		</div>
+
 	</body>
 </html>
