--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,7 @@
 		<!-- <script type="text/javascript" src="../resouces/js/jquery-3.4.1.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/bootstrap.min.js" charset="UTF-8"></script>
 		<link rel="stylesheet" type="text/css" href="../resouces/css/bootstrap.min.css"> -->
-		
+
 		<!-- bootstrap -->
 		<link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
 		<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
@@ -16,62 +16,80 @@
 		<!-- 预加载 -->
 		<link rel="stylesheet" type="text/css" href="../resouces/css/index/main.css">
 		<script type="text/javascript" src="../resouces/js/index/begin.js" charset="UTF-8"></script>
-		
+
 		<!-- 心 -->
 		<link rel="stylesheet" type="text/css" href="../resouces/css/index/heart.css">
-		
+
 		<!-- 樱花 -->
 		<link rel="stylesheet" type="text/css" href="../resouces/css/sakura/main.css">
 		<script type="text/javascript" src="../resouces/js/sakura/main.js" charset="UTF-8"></script>
 
 		<!-- 导航栏 -->
+		<link rel="stylesheet" type="text/css" href="../resouces/css/navigation/main.css">
 		<script type="text/javascript" src="../resouces/js/navigation/main.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/to-lottery.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/display-prizes.js" charset="UTF-8"></script>
-		<script type="text/javascript" src="../resouces/js/navigation/no-display-prizes.js" charset="UTF-8"></script>
 
 		<title>首页 - 谷心然小朋友专用系统</title>
 	</head>
 	<body>
-		
+
 		<div class="sakura">
 			<img id="sakura-img" src="../resouces/img/sakura/sakura.png" />
 		</div>
 
-		<nav id="nav" class="navbar navbar-default" role="navigation">
-			<div>
-				<div class="container-fluid">
-					<div class="navbar-header">
-						<a href="javascript:void(0);onclick=noDisplayPrize()">
-							<p class="navbar-brand navBarFont">谷心然小朋友专用系统</p>
-						</a>
-						<ul class="nav navbar-nav collapse navbar-collapse">
-							<li>
-								<a href="javascript:void(0);onclick=toLottery()">
-									<p class="navBarFont">开奖系统</p>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<p class="navBarFont">
-										奖品池
-									</p>
-								</a>
-							</li>
-							<li>
-								<a href="javascript:void(0);onclick=displayPrize()">
-									<p class="navBarFont">
-										往期中奖汇总
-									</p>
-								</a>
-							</li>
-						</ul>
-					</div>
+		<nav id="nav" class="navbar navbar-default index-nav">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<span class="navbar-brand">谷心然小朋友专用系统</span>
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					 aria-controls="navbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li>
+							<a href="javascript:void(0);onclick=noDisplayPrize()">
+								主页
+							</a>
+						</li>
+						<li>
+							<a href="javascript:void(0);onclick=toLottery()">
+								开奖系统
+							</a>
+						</li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle .disabled" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">奖品池
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a href="./prizepool.html">
+										谷心然小朋友的购物车
+									</a>
+								</li>
+								<li role="separator" class="divider"></li>
+								<li>
+									<a href="#">
+										谷心然小朋友的书单
+									</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a id="prize" href="javascript:void(0);onclick=indexDisplayPrize()">
+								往期中奖汇总
+							</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
 
-		
 		<div class="jumbotron container">
 			<div id="first-row">
 				<div class="row first-row-style">
@@ -135,7 +153,7 @@
 								<h2>你好哇，</h2>
 								<h2>可爱的谷心然小朋友</h2>
 								<h2>qwq</h2><br />
-								<p>欢迎使用专属于你的开奖系统，</p>
+								<p>欢迎使用你的开奖系统，</p>
 								<p>祝你今天好运连连！！！</p>
 								<br />
 							</div>
