Update and rename prizepool.html to shoppingCart.html

--- a/index/shoppingCart.html
+++ b/index/shoppingCart.html
@@ -13,21 +13,21 @@
 		<link rel="stylesheet" type="text/css" href="../resouces/css/font-awesome.min.css">
 
 		<!-- 预加载 -->
-		<script type="text/javascript" src="../resouces/js/prizepool/begin.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/shopping_cart/begin.js" charset="UTF-8"></script>
 
 		<!-- 滑动窗口 -->
-		<link rel="stylesheet" type="text/css" href="../resouces/css/prizepool/slide.css">
+		<link rel="stylesheet" type="text/css" href="../resouces/css/shopping_cart/slide.css">
 		<link rel="stylesheet" type="text/css" href="../resouces/css/swiper.min.css">
 		<script type="text/javascript" src="../resouces/js/swiper.min.js" charset="UTF-8"></script>
-		<script type="text/javascript" src="../resouces/js/prizepool/slide.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/shopping_cart/slide.js" charset="UTF-8"></script>
 		
 		<!-- 卡片样式-->
-		<link rel="stylesheet" type="text/css" href="../resouces/css/prizepool/card.css">
+		<link rel="stylesheet" type="text/css" href="../resouces/css/shopping_cart/card.css">
 		
 		<!-- 背景 -->
-		<link rel="stylesheet" type="text/css" href="../resouces/css/prizepool/star.css">
-		<script type="text/javascript" src="../resouces/js/prizepool/stop-execution-on-timeout.js" charset="UTF-8"></script>
-		<script type="text/javascript" src="../resouces/js/prizepool/star.js" charset="UTF-8"></script>
+		<link rel="stylesheet" type="text/css" href="../resouces/css/shopping_cart/star.css">
+		<script type="text/javascript" src="../resouces/js/shopping_cart/stop-execution-on-timeout.js" charset="UTF-8"></script>
+		<script type="text/javascript" src="../resouces/js/shopping_cart/star.js" charset="UTF-8"></script>
 
 		<!-- 导航栏 -->
 		<link rel="stylesheet" type="text/css" href="../resouces/css/navigation/main.css">
@@ -36,15 +36,15 @@
 		<script type="text/javascript" src="../resouces/js/navigation/display-prizes.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/to-lottery.js" charset="UTF-8"></script>
 
-		<title>奖品池 - 谷心然小朋友专用系统</title>
+		<title>购物车 - 谷心然小朋友专用系统</title>
 	</head>
 	<body>
 		<div class="stars"></div>
 		
-		<nav id="nav" class="navbar navbar-default prizepool-nav">
+		<nav id="nav" class="navbar navbar-default shopping-cart-nav">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<span class="navbar-brand prizepool-navbar-brand">谷心然小朋友专用系统</span>
+					<span class="navbar-brand shopping-cart-navbar-brand">谷心然小朋友专用系统</span>
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
 					 aria-controls="navbar">
 						<span class="icon-bar"></span>
@@ -55,7 +55,7 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse pirzepool-navbar">
 					<ul class="nav navbar-nav">
-						<li class="prizepool-li">
+						<li class="shopping-cart-li">
 							<a href="./index.html">
 								主页
 							</a>
@@ -71,20 +71,20 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li>
-									<a href="./prizepool.html">
+									<a href="./shoppingCart.html">
 										谷心然小朋友的购物车
 									</a>
 								</li>
 								<li role="separator" class="divider"></li>
 								<li>
-									<a href="#">
+									<a href="./booklist.html">
 										谷心然小朋友的书单
 									</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="javascript:void(0);onclick=prizepoolDisplayPrize()">
+							<a href="javascript:void(0);onclick=shoppingCartDisplayPrize()">
 								往期中奖汇总
 							</a>
 						</li>
