--- a/index/index.html
+++ b/index/index.html
@@ -68,13 +68,13 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li>
-									<a href="./prizepool.html">
+									<a href="./shoppingCart.html">
 										谷心然小朋友的购物车
 									</a>
 								</li>
 								<li role="separator" class="divider"></li>
 								<li>
-									<a href="#">
+									<a href="./booklist.html">
 										谷心然小朋友的书单
 									</a>
 								</li>
