--- a/index/shoppingCart.html
+++ b/index/shoppingCart.html
@@ -35,6 +35,10 @@
 		
 		<script type="text/javascript" src="../resouces/js/navigation/display-prizes.js" charset="UTF-8"></script>
 		<script type="text/javascript" src="../resouces/js/navigation/to-lottery.js" charset="UTF-8"></script>
+		
+		<!-- 鼠标效果 -->
+		<script type="text/javascript" src="../resouces/js/mouse_effect/cursor-effects.js" charset="UTF-8"></script>
+		<link rel="stylesheet" type="text/css" href="../resouces/css/mouse_effect/main.css">
 
 		<title>购物车 - 谷心然小朋友专用系统</title>
 	</head>
